chore: sidebar stopPropagation and multiselect overflow WIP

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -76,6 +76,8 @@
 
 html {
   font-size: 16px; /* rem */
+  height: 100vh;
+  width: 100vw;
 }
 
 /* Hide scrollbar but keep scrolling functionality */
